--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,6 +7,7 @@
     <string name="humidity">Humidity</string>
     <string name="OK">OK</string>
     <string name="enter_city">Enter the name of the city</string>
+    <string name="settings">Settings</string>
     <string name="settings_style">Dark/light style</string>
     <string name="settings_language">Choose language</string>
 </resources>
