--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,7 @@
 <resources>
     <string name="app_name">Weather</string>
     <string name="City">City</string>
+    <string name="city_hint">Choose city</string>
     <string name="Temperature">Temperature</string>
     <string name="Cloudiness">Cloudiness</string>
     <string name="Humidity">Humidity</string>
