--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,4 +12,7 @@
     <string name="settings">Settings</string>
     <string name="settings_style">Dark/light style</string>
     <string name="settings_language">Choose language</string>
+
+    <string name="error_fail_connection">Fail connection</string>
+    <string name="error_city_not_found">City not found</string>
 </resources>
